--- a/data.html
+++ b/data.html
@@ -13,6 +13,10 @@
     美国宏观经济数据库——数据图表
 </h1>
 
+<h2>
+    一览表和目录
+    </h2>
+
 <p>
     &copy;方正中期期货<br />
     联系人：王天民 <a href="mailto:16307130090@fudan.edu.cn">16307130090@fudan.edu.cn</a>
@@ -100,56 +104,42 @@
 </h3>
 <div id="first_unemp_all" style="width: 1200px;height:400px;"></div>
 
-<h3>
-    2.7.1 辞职率（离职率，过去10年月度数据对比）
-</h3>
+<h3>2.7.1 辞职率（离职率，过去10年月度数据对比）</h3>
 <div id="resg_compare" style="width: 1200px;height:400px;"></div>
 
-<h3>
-    2.7.2 辞职率（离职率，过去10年月度数据）
-</h3>
+<h3>2.7.2 辞职率（离职率，过去10年月度数据）</h3>
 <div id="resg_index" style="width: 1200px;height:400px;"></div>
 
-<h3>
-    2.8 新增（和新减）就业人数，过去10年月度数据
-</h3>
+<h3>2.8 新增（和新减）就业人数，过去10年月度数据</h3>
 <div id="emp_new" style="width: 1200px;height:400px;"></div>
 
-<h3>
-    2.9 职位空缺数（缺人数），过去10年月度数据
-</h3>
+<h3>2.9 职位空缺数（缺人数），过去10年月度数据</h3>
 <div id="emp_new" style="width: 1200px;height:400px;"></div>
 
-<h2>
-    3 个人消费统计
-</h2>
+<h2>3 个人消费统计</h2>
 
-<h3>
+<h3>3.1 个人收入（数据来源存疑，不确定是否为美元不变价，暂缺）</h3>
+<h3>3.2 个人消费支出（美元不变价，季度数据）</h3>
+<div id="expd_all" style="width: 1200px;height:400px;"></div>
+<h3>3.3.1 零售和食品服务销售额（近10年月度数据对比）</h3>
+<div id="retail_compare" style="width: 1200px;height:400px;"></div>
+<h3>3.3.2 零售和食品服务销售额（近10年月度数据）</h3>
+<div id="retail_all" style="width: 1200px;height:400px;"></div>
 
-</h3>
+<h2>4 住房和建筑业</h2>
 
-<h2>
-    4 住房和建筑业
-</h2>
+<h2>5 制造业和商业活动</h2>
+<h2>6 价格水平和通货膨胀</h2>
+<h3>6.1 CPI, PCE, PPI, and GDP Deflator（过去10年月度数据）</h3>
+<div id="price_all" style="width: 1200px;height:400px;"></div> <!--画四张图在这里 CPI PPI PCE GDP_DEFLATER-->
+<h3>6.2 进出口价格指数（过去10年月度数据）</h3>
+<div id="inex_price_all" style="width: 1200px;height:400px;"></div> <!--画两张图在这里 进口价格和出口价格-->
 
-<h2>
-    5 制造业和商业活动
-</h2>
-
-<h2>
-    6 价格水平和通货膨胀
-</h2>
-<h3>
-    6.1 CPI（过去10年月度数据）
-</h3>
-<div id="cpi_all" style="width: 1200px;height:400px;"></div>
-<h3>6.2 PCE（过去10年月度数据）</h3>
-<div id="PCE_all" style="width: 1200px;height:400px;"></div>
-<h3>6.2 PPI（过去10年月度数据）</h3>
-<div id="PCE_all" style="width: 1200px;height:400px;"></div>
-
-
-
+<h2>7 联邦政府预算</h2>
+<h3>7.1 财政政府赤字（2008-2028，不更新）</h3>
+<div id="fed_defi" style="width: 1200px;height:400px;"></div> <!--双坐标轴-->
+<h3>7.2 货币供给（M1, M2）</h3>
+<div id="money_supp" style="width: 1200px;height:400px;"></div> <!--两个图，M1和M1+M2-->
 
 
 <script>
@@ -176,11 +166,7 @@
                 bottom: '3%',
                 containLabel: true
             },
-            toolbox: {
-                feature: {
-                    saveAsImage: {}
-                }
-            },
+            toolbox: {feature: {saveAsImage: {}}},
             xAxis: {
                 type: 'category',
                 name: "时间",
@@ -200,13 +186,22 @@
         };
         gdp_Chart.setOption(option);
 
+        var fed_defi_opt = {
+            tooltip:{trigger:"axis"},legend:{data:['预算赤字','GDP占比'],orient:'horizontal',show:true},toolbox: {feature:{saveAsImage:{}}},
+            xAxis: {type: 'category',name: "",
+            data:[2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022, 2023, 2024, 2025, 2026, 2027, 2028]},
+            yAxis: [{type: 'value', scale: true, axisTick: {show:true}, splitLine: {show:false}, splitNumber: 10,name: "预算赤字"},
+        {type: 'value', scale: true, axisTick: { show: true }, axisLabel:{show:true,formatter:'{value}%'},splitNumber: 10, name: "GDP占比" },],
+        series:[{name: '预算赤字',type:'line',yAxisIndex: '0',data:[459.0, 1413.0, 1293.0, 1300.0, 1087.0, 680.0, 485.0, 438.0, 585.0, 665.0, 873.0, 984.0, 987.0, 916.0, 852.0, 774.0, 672.0, 579.0, 517.0, 450.0, 363.0]},
+        { name: 'GDP占比', type: 'line',yAxisIndex:'1', data: [3.2, 9.9, 8.9, 8.7, 7.0, 4.1, 2.8, 2.5, 3.2, 3.5, 4.4, 4.7, 4.5, 3.9, 3.5, 3.0, 2.5, 2.1, 1.7, 1.4, 1.1]}]};
+        var fed_defi = echarts.init(document.getElementById("fed_defi"));
+        fed_defi.setOption(fed_defi_opt);
+
         var emp_compare = echarts.init(document.getElementById("emp_compare"));
         var emp_all = echarts.init(document.getElementById("emp_all")); 
         var years = [];
         for(var i=0;i<10;i++)
-        {
             years.push(String(this_year-i));
-        }
         option = {
                 tooltip: {
                     trigger: 'item'
@@ -243,7 +238,6 @@
         sal_compare.setOption(option);
         var sal_index = echarts.init(document.getElementById("sal_index"));
         sal_index.setOption(option);
-
 
         files.addEventListener("change", function () {
                 var reader = new FileReader();
