数据显示界面

--- a/data.html
+++ b/data.html
@@ -125,10 +125,84 @@
 <div id="retail_compare" style="width: 1200px;height:400px;"></div>
 <h3>3.3.2 零售和食品服务销售额（近10年月度数据）</h3>
 <div id="retail_all" style="width: 1200px;height:400px;"></div>
+<h3>3.4.1 零售和食品服务销售额（近10年月度数据对比，不含机动车）</h3>
+<div id="retail_compare_without" style="width: 1200px;height:400px;"></div>
+<h3>3.4.2 零售和食品服务销售额（近10年月度数据，不含机动车）</h3>
+<div id="retail_all_without" style="width: 1200px;height:400px;"></div>
+<h3>3.5.1 轿车销量（近10年月度数据对比）</h3>
+<div id="car_compare" style="width: 1200px;height:400px;"></div>
+<h3>3.5.2 轿车销量（近10年月度数据）</h3>
+<div id="car_all" style="width: 1200px;height:400px;"></div>
+<h3>3.6.1 卡车销量（近10年月度数据对比）</h3>
+<div id="truct_compare" style="width: 1200px;height:400px;"></div>
+<h3>3.6.2 卡车销量（近10年月度数据）</h3>
+<div id="truct_all" style="width: 1200px;height:400px;"></div>
+<h3>3.7.1 消费者信心（近10年月度数据对比）</h3>
+<div id="conf_compare" style="width: 1200px;height:400px;"></div>
+<h3>3.7.2 消费者信心（近10年月度数据）</h3>
+<div id="conf_all" style="width: 1200px;height:400px;"></div>
 
 <h2>4 住房和建筑业</h2>
+<h3>4.1.1 已开工的新建私人住宅（近10年月度数据对比）</h3>
+<div id="house_begin_compare" style="width: 1200px;height:400px;"></div>
+<h3>4.1.2 已开工的新建私人住宅（近10年月度数据）</h3>
+<div id="house_begin_all" style="width: 1200px;height:400px;"></div>
+<h3>4.2.1 已批准的新建私人住宅（近10年月度数据对比）</h3>
+<div id="house_apprv_compare" style="width: 1200px;height:400px;"></div>
+<h3>4.2.2 已批准的新建私人住宅（近10年月度数据）</h3>
+<div id="house_apprv_all" style="width: 1200px;height:400px;"></div>
+<h3>4.3 建造开支（包括住宅和非住宅，近10年月度数据） </h3>
+<div id="cons_spend_all" style="width: 1200px;height:400px;"></div>
+<h3>4.4.1 新屋销售（近10年月度数据对比）</h3>
+<div id="house_sell_compare" style="width: 1200px;height:400px;"></div>
+<h3>4.4.2 新屋销售（近10年月度数据）</h3>
+<div id="house_sell_all" style="width: 1200px;height:400px;"></div>
 
 <h2>5 制造业和商业活动</h2>
+<h3>5.1.1 采购经理人指数（制造业，近10年月度数据对比）</h3>
+<div id="pmi_manu_compare" style="width: 1200px;height:400px;"></div>
+<h3>5.1.1 采购经理人指数（非制造业，近10年月度数据对比）</h3>
+<div id="pmi_non_compare" style="width: 1200px;height:400px;"></div>
+<h3>5.1.3 采购经理人指数（近10年月度数据）</h3>
+<div id="pmi_all" style="width: 1200px;height:400px;"></div> <!--两个图线-->
+<h3>5.2.1 工业部门产能利用率（近10年月度数据对比）</h3>
+<div id="indus_ratio_compare" style="width: 1200px;height:400px;"></div>
+<h3>5.2.2 工业部门产能利用率（近10年月度数据）</h3>
+<div id="indus_ratio_all" style="width: 1200px;height:400px;"></div>
+<h3>5.3.1 工业总产值: 最终产品和非工业用品（近10年月度数据对比）</h3>
+<div id="indus_prod_final_compare" style="width: 1200px;height:400px;"></div>
+<h3>5.3.2 工业总产值: 最终产品和非工业用品（近10年月度数据）</h3>
+<div id="indus_prod_final_all" style="width: 1200px;height:400px;"></div>
+<h3>5.4 工业总产值: 汽车（近10年月度数据）</h3>
+<div id="indus_prod_auto_all" style="width: 1200px;height:400px;"></div>
+<h3>5.5.1 全部制造业新增订单（近10年月度数据对比）</h3>
+<div id="manu_order_compare" style="width: 1200px;height:400px;"></div>
+<h3>5.5.2 全部制造业新增订单（近10年月度数据）</h3>
+<div id="manu_order_all" style="width: 1200px;height:400px;"></div>
+<h3>5.6.1 耐用品制造业新增订单（近10年月度数据对比）</h3>
+<div id="manu_dura_compare" style="width: 1200px;height:400px;"></div>
+<h3>5.6.2 耐用品制造业新增订单（近10年月度数据）</h3>
+<div id="manu_dura_all" style="width: 1200px;height:400px;"></div>
+<h3>5.7.1 耐用品制造业未完成订单（近10年月度数据对比）</h3>
+<div id="manu_dura_unfi_compare" style="width: 1200px;height:400px;"></div>
+<h3>5.7.2 耐用品制造业未完成订单（近10年月度数据）</h3>
+<div id="manu_dura_unfi_all" style="width: 1200px;height:400px;"></div>
+<h3>5.8 除运输品外耐用制造业新增订单 </h3>
+<div id="manu_dura_trans_all" style="width: 1200px;height:400px;"></div>
+<h3>5.9 美国耐用消费品出货量（近10年月度数据） </h3>
+<div id="manu_dura_prod_all" style="width: 1200px;height:400px;"></div>
+<h3>5.10 美国耐用消费品存货量（近10年月度数据） </h3>
+<div id="manu_dura_own_all" style="width: 1200px;height:400px;"></div>
+<h3>5.11.1 贸易差额（近10年月度数据对比）</h3>
+<div id="trade_compare" style="width: 1200px;height:400px;"></div>
+<h3>5.11.2 贸易差额商品（近10年月度数据对比）</h3>
+<div id="trade_goods_compare" style="width: 1200px;height:400px;"></div>
+<h3>5.11.3 贸易差额服务（近10年月度数据对比）</h3>
+<div id="trade_service_compare" style="width: 1200px;height:400px;"></div>
+<h3>5.11.4 贸易差额，商品和服务（近10年月度数据）</h3>
+<div id="trade_all" style="width: 1200px;height:400px;"></div><!--三个图线-->
+
+
 <h2>6 价格水平和通货膨胀</h2>
 <h3>6.1 CPI, PCE, PPI, and GDP Deflator（过去10年月度数据）</h3>
 <div id="price_all" style="width: 1200px;height:400px;"></div> <!--画四张图在这里 CPI PPI PCE GDP_DEFLATER-->
