数据显示界面‍

--- a/data.html
+++ b/data.html
@@ -207,9 +207,15 @@
 
 
 <h2>6 价格水平和通货膨胀</h2>
-<h3>6.1 CPI, PCE, PPI, and GDP Deflator（过去10年月度数据）</h3>
-<div id="price_all" style="width: 1200px;height:400px;"></div> <!--画四张图在这里 CPI PPI PCE GDP_DEFLATER-->
-<h3>6.2 进出口价格指数（过去10年月度数据）</h3>
+<h3>6.1 CPI（过去10年月度数据）</h3>
+<div id="cpi_all" style="width: 1200px;height:400px;"></div>
+<h3>6.2 PCE（过去10年月度数据）</h3>
+<div id="pce_all" style="width: 1200px;height:400px;"></div>
+<h3>6.3 PPI(过去10年月度数据）</h3>
+<div id="ppi_all" style="width: 1200px;height:400px;"></div>
+<h3>6.4 GDP Deflator（过去10年月度数据）</h3>
+<div id="gdpdefl_all" style="width: 1200px;height:400px;"></div>
+<h3>6.5 进出口价格指数（过去10年月度数据）</h3>
 <div id="inex_price_all" style="width: 1200px;height:400px;"></div> <!--画两张图在这里 进口价格和出口价格-->
 
 <h2>7 联邦政府预算</h2>
